# invest_like_legends

./: .gitignore  ARCHITECTURE.md  README.md  RULES.md  codereview-report.md  investor_data.py  naitou_seigo.html  package-lock.json  package.json  pyproject.toml  serve.py  tsconfig.json
.claude/: settings.local.json
.claude/hooks/: stop_require_lowercase_headers.py
.github/workflows/: update_investors.yml  update_metrics.yml
assets/: stock-table.js  style.css
config/: investors.json  magic_numbers.toml  watch_codes.txt
docs/: index.html
docs/assets/: app.js  stock-price-meta.json  stock-table.js  style.css
docs/assets/data/: investors.json  metrics.json  shareholder_candidates.json
scripts/: enrich_investors.py  generate_metrics.py  jj-integrate-main.py
server/: browser.py  config.py  handler.py  metrics.py
src_ts/: app.ts  stock-table.d.ts
tests/: conftest.py  test_investor_data.py  test_serve.py  test_stock_db_api_boundary.py
