[project]
name = "invest-like-legends"
version = "0.1.0"
description = "invest_like_legends"
requires-python = ">=3.13,<3.14"
dependencies = [
    "formula-screening",
    "stock-db @ /home/exp/projects/stock_db",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
formula-screening = { path = "../formula_screening", editable = true }
