[project]
name = "invest-like-legends"
version = "0.1.0"
description = "invest_like_legends"
requires-python = ">=3.13,<3.14"
dependencies = [
    "formula-screening",
    "stock-db>=0.1.0,<1",
    "stock-web-ui>=0.1.0,<1",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
formula-screening = { path = "../formula_screening", editable = true }
stock-db = { path = "../stock_db", editable = true }
stock-web-ui = { path = "../stock_web_ui", editable = true }
